<resources>
    <string name="app_name">Klonkr</string>
    <string name="welcome_to_kl_nkr">Welcome to Klònkr!</string>
    <string name="transport_your_life_into_data">Transport your life into data</string>
    <string name="take_survey">Take Survey</string>
    <string name="preferences">Preferences</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview" />
    <string name="button">Button</string>
    <string name="about">about</string>
    <string name="about1">About</string>
    <string name="settings">Settings</string>
    <string name="logo">logo</string>
    <string name="edit_questions">Edit Questions</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="excel_gsheets">Excel / Gsheets</string>
    <string name="export_location">Export location</string>
    <string name="credits_button">Credits</string>
    <string name="about_section">This app is kind of weird app ain\'t it?\n It possesses a very simple function,\n but it could have great impact on your live.\n It can help you to not forget important things,\n or maybe lessen the influence of bad habits.\n\n This app is all about you.\n Without you it would not have a purpose.\n Take a survey about yourself everyday,\n export the data that\'s generated.\n And observe your life, in a simple sheet.</string>
    <string name="credits">Thanks for reading the Credits;\n\nDeveloper:   Jitze Lindeboom;\nName Design: Brient Woebiehoes;\nFont:        Google Fonts, Josefin Sans;\nIcons:       The vector thingies in Android Studio;</string>
    <string name="credits_title">Credits</string>
    <string name="questions">Questions</string>
    <string name="export_location_none">Export Location: None</string>
    <string name="all_done">All Done!</string>
    <string name="daily_survey">Daily Survey</string>
    <string name="m">M</string>
    <string name="question">Question</string>
    <string name="y_s">Y/S</string>
    <string name="a">A</string>
    <string name="thing">Thing</string>
    <string name="fill_in_a_question">Fill in a question</string>
    <string name="y_n">Y/N</string>
    <string name="dong">Dong</string>
    <string name="your_answer">Your answer</string>
    <string name="your_question">Your question</string>
    <string name="click_the_forward_arrow_to_start">Click the forward arrow to start</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="does_not_work_yet_only_edit_questions_works">DOES NOT WORK YET!!! ONLY EDIT QUESTIONS WORKS</string>
</resources>