<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:background="#333">

    <RelativeLayout
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:background="#333"
        android:backgroundTintMode="screen"
        android:padding="8dp">

        <TextView
            android:id="@+id/rowQuestion"
            android:layout_width="214dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:text="@string/question"
            android:textColor="@color/accent" />

        <TextView
            android:id="@+id/rowModeText"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignTop="@+id/rowQuestion"
            android:layout_alignBottom="@+id/rowQuestion"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/rowQuestion"
            android:background="@color/white"
            android:text="@string/y_n"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/rowDeleteButton"
            android:layout_width="28dp"
            android:layout_height="38dp"
            android:layout_alignTop="@+id/rowQuestion"
            android:layout_alignBottom="@+id/rowQuestion"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@+id/rowModeText"
            android:background="@color/delete"
            android:contentDescription="@string/dong"
            app:srcCompat="@drawable/ic_baseline_delete_24" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>